[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://images/title.png" type="Texture" id=2]
[ext_resource path="res://images/start_button.png" type="Texture" id=3]
[ext_resource path="res://fonts/COMIC.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="menu" type="Node"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 0.8, 1.36 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="start" type="Button" parent="."]
margin_left = 470.0
margin_top = 510.0
margin_right = 923.0
margin_bottom = 787.0
rect_rotation = -15.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 3 )
flat = true

[node name="credit" type="Button" parent="."]
margin_left = 453.0
margin_top = 328.0
margin_right = 530.0
margin_bottom = 482.0
flat = true

[node name="Label" type="Label" parent="credit"]
margin_left = -6.67346
margin_top = 20.5337
margin_right = 59.3265
margin_bottom = 43.5337
rect_rotation = -31.0306
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0745098, 0.243137, 0.486275, 1 )
align = 1
valign = 1

[node name="quit" type="Button" parent="."]
margin_left = 618.0
margin_top = 285.0
margin_right = 686.0
margin_bottom = 449.0
flat = true

[node name="Label" type="Label" parent="quit"]
margin_left = -7.78357
margin_top = 30.5356
margin_right = 51.2164
margin_bottom = 53.5356
rect_rotation = -40.7431
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0745098, 0.243137, 0.486275, 1 )
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="credit" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="credit" to="." method="_on_credit_mouse_exited"]
[connection signal="pressed" from="credit" to="." method="_on_credit_pressed"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
